- Fixed a bug in freeChar().
- There are bigger problems with alignment center and right. The width of
  a line is not calculated correctly - we have to find a way to do that
  quite fast _and_ correctly.

Reggie, 13.9.1998:
------------------
- Implemented KWFormatCollection, and it's already working
- fixed a bug in "Blocksatz"

Reggie, 14.9.1998:
------------------
- Fixed finally THE bug in KWString :-)
- Totally integrated KWFormatCollecion
- Fixed a bug in backspace
- Fixed a bug with joining paragraphs
- Fixed a redraw problem with delete/backspace, but there are still
  problems with setting the cursor.
- Bugfix in printLine
- Bugfix in Key_Delete
- Improoved speed of deleting/inserting text and scrolling the canvas
  (now only the visible text is repainted) 
- Some bugfixes in the KWFormatContext and in printing lines

Reggie, 15.9.1998:
------------------
- Fixed a bug with setting formats
- Added some new GUI stuff

Reggie, 16.9.1998:
------------------
- Started working on alignments/flows. Now you can choose the flow
  for the current paragraph via the toolbar, and the toolbar is
  updated automatically when moving the cursor. Now I have to
  work on the implementation of CENTER and RIGHT, this is really
  broken at the moment...

Reggie, 17.9.1998:
------------------
- Started working on CENTER flow
- Started writing a dialog for paragraph settings

Reggie, 18.9.1998:
------------------
- Worked on paragraph settings dialog (started a cool preview widget)
- Fixed a redraw problem (with setting some clippings)

Reggie, 19.9.1998:
------------------
- Worked on paragraph settings dialog
- Some improvements with linebreaking
- Fixed bug in cursor navigation
- Fixed bug in "Blocksatz"

Reggie, 20.9.1998:
------------------
- Implemented configurable left indent and first line left indent
- Fixed some bugs in cursor navigation
- Fixed a bug in Key_Backspace
- Automatically recalc/update of the cursor, if a new page/paragraph layout is set 