@@ -11,13 +11,16 @@ SUBDIRS = pics test
 lib_LTLIBRARIES = libkofficeui.la
 
 libkofficeui_la_SOURCES = koAboutDia.cc koPageLayoutDia.cc \
-	koPartSelectDia.cc koPartSelectDia_data.cc koPrintDia.cc
+	koPartSelectDia.cc koPartSelectDia_data.cc koPrintDia.cc \
+	koRuler.cc
 
 include_HEADERS = koAboutDia.h koPageLayoutDia.h \
-	koPartSelectDia.h koPartSelectDia_data.h koPrintDia.h
+	koPartSelectDia.h koPartSelectDia_data.h koPrintDia.h \
+	koRuler.h
 
 SRCMETA = koAboutDia.moc koPageLayoutDia.moc koPartSelectDia.moc \
-	koPartSelectDia_data.moc koPrintDia.moc
+	koPartSelectDia_data.moc koPrintDia.moc \
+	koRuler.moc
 
 SUFFIXES = .h .moc
 
@@ -29,3 +32,4 @@ koPageLayoutDia.cc: koPageLayoutDia.moc
 koPartSelectDia.cc: koPartSelectDia.moc
 koPartSelectDia_data.cc: koPartSelectDia_data.moc
 koPrintDia.cc: koPrintDia.moc
+koRuler.cc: koRuler.moc
